[package]
name = "nphysics_godot_bindings"
version = "0.2.0"
authors = ["nriewald <niklas.riewald@gmail.com>"]
edition = "2018"

[dependencies]
Inflector  = "0.11"
nalgebra   = "0.27.1"
parry2d = "0.5.1"
rapier2d = { version = "0.9.1", features = [ "simd-stable" ] }
gdnative = "0.9.0-preview.0"

[dependencies.salva2d]
version = "0.6.0"
features = ["rapier", "sampling", "parallel"]

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[lib]
crate-type = ["cdylib"]
