[package]
name = "nphysics_godot_bindings"
version = "0.2.0"
authors = ["nriewald <niklas.riewald@gmail.com>"]
edition = "2018"

[dependencies]
Inflector  = "0.11"
parry2d = "0.6"
rapier2d = { version = "0.10", features = [ "simd-stable", "default-sets"] }
gdnative = "0.9.0-preview.0"

[dependencies.salva2d]
version = "0.7.0"
features = ["rapier", "sampling", "parallel"]

[dependencies.nalgebra]
version = "0.29"
features = ["proptest-support"]


[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[lib]
crate-type = ["cdylib"]
