[package]
name = "nphysics_godot_bindings"
version = "0.3.0"
authors = ["nriewald <niklas.riewald@gmail.com>"]
edition = "2021"

[dependencies]
Inflector  = "0.11"
parry2d = "0.15.1"
rapier2d = { version = "0.20.0", features = [ "simd-stable"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master"}

[dependencies.salva2d]
version = "0.9.0"
features = ["rapier", "sampling", "parallel"]

[dependencies.nalgebra]
version = "0.32.6"
features = ["proptest-support"]


[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4"

[target.wasm32-unknown-emscripten.dependencies]
stdweb = "0.4"

[target.asmjs-unknown-emscripten.dependencies]
stdweb = "0.4"

[lib]
crate-type = ["cdylib"]
